Add validation for constructor args and implement factory methods